--- a/Assignmnet2/Assignment2.Rmd
+++ b/Assignmnet2/Assignment2.Rmd
@@ -24,6 +24,15 @@ output:
 ---
 
 # Introduction
+
+## Research Questions 
+* Q1: How does the type of music or silence influence students' focus levels?
+* Q2: How do music type and focus level together affect task completion time?
+* Q3: How does the type of background music impact the time required to complete a task?
+
+
+
+## Survay Questions
 In this report, we want to analyze whether the genre of background music has an impact on students' study performance. The hypothesis is that studying with low-tempo instrumental music helps complete comprehension tasks more accurately and quickly compared to studying with lyrical music or in silence. To test this, we have prepared three survey questions as follows:
 
 * Q1: Type of background music while studying (None, Instrumental, Music with lyrics, Other).
@@ -97,7 +106,7 @@ ggplot(data, aes(x = MusicType, fill = MusicType)) +
 ```
 
 
-This plot  shows the sample size for each music type, which is important for interpreting statistical test results later.
+This plot  shows the sample size for each music type, which is important for interpreting statistical test results later. It shows study without music leads to heigher time to complete the task. It also shows that type of music does not influence on the time of completion.
 
 
 ##  Completion Time by Background Music Type
@@ -136,6 +145,7 @@ ggplot(data, aes(x = MusicType, y = FocusLevel, fill = MusicType)) +
 
 This plot provides a visual comparison of focus levels across different music types. Instrumental music appears to be associated with slightly higher median focus levels.
 
+
 ##  Distribution of Numerical Variables
 
 Histograms for FocusLevel and TimeToComplete show their overall distributions.
@@ -157,6 +167,17 @@ plot_grid(p1, p2, ncol = 2)
 ```
 
 These histograms provide insights into the overall spread and skewness of the numerical variables, which is useful for assessing normality assumptions later.
+
+
+## Conclusion
+Thease diagrams can answer the questions below:
+
+* RQ1: How does the type of music or silence influence students' focus levels?
+As the statistices calculations show, listening to the music has a positive influence on the focus level. But the type of the music does not impact on it. it shows, studing in scilence will lead to lower focus level. But in the future in the test we will see that listening to the music while studing has a negative impact and it caused by the outlier and noises in the data which has a negative impact on this visualisation.
+
+* RQ3: How does the type of background music impact the time required to complete a task?
+Type of Backgraound music does not have influce on it. They are same.
+
 
 #  Descriptive Inference
 
@@ -300,8 +321,26 @@ The mean FocusLevel appears higher with music compared to no music in the summar
 
 This apparent contradiction arises because the mean and median values reflect central tendencies that can be influenced by the distribution's shape, while the Kruskal-Wallis test and Dunn's test assess differences in ranks, which are less sensitive to the exact scale but highlight relative ordering. The histograms and the QQ plot for the ANOVA residuals suggest non-normal distributions and potential outliers, which could explain why the mean FocusLevel is higher with music , while the rank-based tests indicate lower focus relative to "None." The Dunn's test shows no significant difference between "Instrumental" and "Music with lyrics" (p = 0.29991), consistent with the summary statistics' close means, but the significant drop in rank for music groups versus "None" suggests that self-reported focus is lower in the presence of music when considering the entire distribution.
 
+## Effect of  MusicType  and FocusLevel on Time to Complete
+```{r}
 
-Finally, the Hypothesis: Instrumental music improves focus and performance. is not correct. Based on the analysis, both the one-way ANOVA and the Kruskal-Wallis rank sum test consistently indicate that the type of background music significantly influences the time taken to complete tasks and focous level. Specifically, the findings suggest that students listening to either instrumental music or music with lyrics tend to complete tasks slower compared to those studying in silence. Listening to music also have a negative influence on their focous.
+anova_model <- aov(TimeToComplete ~ MusicType * FocusLevel, data = data)
+summary(anova_model)
+
+```
+
+But Here we use Scheirer-Ray-Hare test, an extension of the Kruskal-Wallis test for two-way designs. This test analyzes the main effects and interaction using ranks, making it appropriate for non-normal data.
+
+```{r}
+library(rcompanion)
+rh_result <- scheirerRayHare(TimeToComplete ~ MusicType * FocusLevel, data = data)
+print(rh_result)
+```
+
+RQ3: How does the type of background music impact the time required to complete a task?
+
+The Scheirer-Ray-Hare test showed no statistically significant effects overall. MusicType had a marginal effect on TimeToComplete (p = 0.074), suggesting a possible influence, though not significant at the 0.05 level. FocusLevel (p = 0.323) and the interaction between MusicType and FocusLevel (p = 0.719) were not significant. This suggests that neither focus level nor its combination with music type had a clear impact on task completion time
+
 
 
 
